--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,13 +3,13 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     url: jdbc:mysql://localhost:3306/dcbapp
-    password: Tameem
+    password: root
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: 'true'
 welcome:
-  message: Hello Ayisha
+  message: Hello
 server:
   port: '8082'
 management:
