--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #server.port=8082
-#welcome.message=Hello Ayisha
+#welcome.message=Hello
 #
 ## spring.h2.console.enabled=true
 ##spring.datasource.url=jdbc:h2:mem:dcbapp
@@ -11,6 +11,6 @@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/dcbapp
 #spring.datasource.username=root
-#spring.datasource.password=Tameem
+#spring.datasource.password=root
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql=true
